// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PopupOverlay.service getBreadcrumbs should return default breadcrumbs 1`] = `
Array [
  Object {
    "linkId": "000111222333444",
    "name": "MyFlowNode",
  },
  Object {
    "name": "123",
  },
]
`;

exports[`PopupOverlay.service getBreadcrumbs should return multi instance body breadcrumbs 1`] = `
Array [
  Object {
    "linkId": "000111222333444",
    "name": "MyFlowNode (Multi Instance)",
  },
  Object {
    "name": "MyFlowNode (Multi Instance ...123)",
  },
]
`;

exports[`PopupOverlay.service getBreadcrumbs should return multi instance child breadcrumbs 1`] = `
Array [
  Object {
    "linkId": "000111222333444",
    "name": "MyFlowNode (Multi Instance)",
  },
  Object {
    "linkId": "000111222333444",
    "name": "MyFlowNode (Multi Instance ...999)",
  },
  Object {
    "name": "MyFlowNode",
  },
]
`;
